# profunda

./: LICENSE  README.md  pyproject copy.toml  pyproject.toml
examples/bank_marketing_data/: banking_data.py
examples/census/: census.py
examples/chicago_employees/: chicago_employees.py
examples/colors/: colors.py
examples/features/: correlation_auto_example.py  correlation_demo.py  eda_dataset_compare.py  images_cats_and_dogs.py  images_exif.py  mask_sensitive.py  russian_vocabulary.py  spark_example.py  theme_flatly_demo.py  theme_united_demo.py  urls.py
examples/hcc/: eda-with-feature-comparison.ipynb  eda-with-feature-comparison.py
examples/integrations/databricks/: ydata-profiling in Databricks.ipynb
examples/integrations/great_expectations/: great_expectations_example.py
examples/meteorites/: meteorites.ipynb  meteorites.py  meteorites_cloud.ipynb
examples/musical_instrument_reviews/: review.py
examples/nza/: nza.py
examples/rdw/: rdw.py
examples/stata_auto/: stata_auto.py
examples/titanic/: titanic.ipynb  titanic.py  titanic_cloud.ipynb
examples/usaairquality/: usaairquality.ipynb  usaairquality.py
examples/vektis/: vektis.py
src/profunda/: __init__.py  compare_reports.py  expectations_report.py  profile_report.py  serialize_report.py
src/profunda/controller/: console.py  pandas_decorator.py
src/profunda/model/: __init__.py  alerts.py  correlations.py  dataframe.py  describe.py  duplicates.py  handler.py  missing.py  pairwise.py  sample.py  summarizer.py  summary.py  summary_algorithms.py  table.py  timeseries_index.py  typeset.py  typeset_relations.py
src/profunda/report/: __init__.py  formatters.py  utils.py
src/profunda/utils/: backend.py  cache.py  common.py  dataframe.py  logger.py  (+1 more)
tests/: conftest.py
tests/issues/: test_issue100.py  test_issue120.py  test_issue147.py  test_issue1529.py  test_issue1631.py  test_issue169.py  test_issue200.py  test_issue215.py  test_issue243.py  test_issue249.py  test_issue282.py  test_issue353.py  test_issue377.py  test_issue388.py  test_issue397.py  test_issue416.py  test_issue437.py  test_issue502.py  test_issue51.py  test_issue523.py  test_issue537.py  test_issue545.py  test_issue613.py  test_issue664.py  test_issue671.py  test_issue72.py  test_issue824.py  test_issue864.py  test_issue915.py  test_issue94.py  test_issueXXX.py
tests/notebooks/: lazy_pipeline.ipynb  meteorites.ipynb  titanic.ipynb
tests/unit/: test_comparison.py  test_config.py  test_console.py  test_correlations.py  test_custom_sample.py  test_dataset_schema.py  test_decorator.py  test_describe.py  test_duplicates.py  test_example.py  test_formatters.py  test_ge_integration.py  test_ge_integration_expectations.py  test_html_export.py  test_index_column_name_clash.py  test_interactions.py  test_modular.py  test_multiindex_columns.py  test_output.py  test_pd_future_infer_string.py  test_plot.py  test_renderable.py  test_report_options.py  test_sensitive.py  test_serialize.py  test_sort.py  test_summarizer.py  test_summary.py  test_summary_algos.py  test_templates.py  test_time_series.py  test_typeset_custom.py  test_typeset_default.py  test_url.py  test_utils.py
(+141 files in other folders)
