[project]
name = "profunda"
version = "0.1.0"
description = "Generate profiling reports with Ibis"
readme = "README.md"
authors = [
    { name = "iwhalen" }
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["pandas", "ibis", "data-science", "data-analysis", "python", "jupyter", "ipython", "data-profiling"]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "dacite>=1.9.2",
    "ibis-framework[duckdb]>=11.0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "minify-html>=0.18.1",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "typeguard>=4.4.4",
]

[project.scripts]
profunda = "profunda:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
test = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]