[project]
name = "profunda"
version = "0.1.0"
description = "Generate profiling reports with Ibis"
readme = "README.md"
authors = [
    { name = "iwhalen" }
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["pandas", "ibis", "data-science", "data-analysis", "python", "jupyter", "ipython", "data-profiling"]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "dacite>=1.9.2",
    "filetype>=1.2.0",
    "ibis-framework[duckdb]>=11.0.0",
    "imagehash>=4.3.2",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "minify-html>=0.18.1",
    "multimethod>=2.0.2",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "typeguard>=4.4.4",
    "visions>=0.8.1",
    "wordcloud>=1.9.6",
]

[project.scripts]
profunda = "profunda:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
test = [
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
